test/fail/generic-request-not-enough.grace
method name<T, U> {}

name<type {}>
